# wyzion-mem0-ai-demo

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.simple  Procfile  QUICK_START.md  README.md  ROHAN_NEGATIVE_CASE_GUIDE.md  ROHAN_TEST_SUMMARY.md  TEST_SCENARIOS.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
tools/: check.py
wyzion_mem0_ai_demo/app/: main.py
wyzion_mem0_ai_demo/data/: missions.py  models.py  mutual_fund_sip.txt  preventative_wellness.txt
wyzion_mem0_ai_demo/helper/: json_formatting.py
wyzion_mem0_ai_demo/templates/: chat.html  login.html
wyzion_mem0_ai_demo/tools/: memory_tools.py  rag_system.py
wyzion_mem0_ai_demo/utils/: __init__.py  logger.py
